--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "author": "bankIO dev team <dev@bankio.co.uk>",
   "keywords": [
-    "PSD2", "OpenBanking", "API"
+    "PSD2",
+    "OpenBanking",
+    "API"
   ],
   "license": "MIT",
   "scripts": {
@@ -32,7 +34,6 @@
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-source-shopify": "^2.0.30",
     "gatsby-transformer-sharp": "^2.1.19",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
